--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 
 # Ignore backend node_modules
 backend/node_modules/
+backend/package-lock.json
+backend/.env
+
+
+# Ignore package-lock.json in frontend
+frontend/package-lock.json
