--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,13 @@
 {
     "version": 2,
+    "installCommand": "npm install --prefix frontend && npm install --prefix backend",
+    "buildCommand": "npm run vercel-build --prefix frontend",
     "builds": [
         {
             "src": "frontend/package.json",
             "use": "@vercel/static-build",
             "config": {
-                "distDir": "dist"
+                "distDir": "frontend/dist"
             }
         },
         {
