--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,8 @@
     "outputDirectory": "frontend/dist",
     "rewrites": [
         {
-            "source": "/api/:path*",
-            "destination": "/api"
+            "source": "/api/(.*)",
+            "destination": "/api?path=$1"
         }
     ]
 }
