--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,7 +60,7 @@
     "react-hook-form": "latest",
     "react-resizable-panels": "latest",
     "react-router-dom": "^6.28.0",
-    "recharts": "latest",
+    "recharts": "^3.5.1",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
