--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,17 @@
 {
+    "version": 2,
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
-    "rewrites": [
+    "functions": {
+        "api/index.js": {
+            "memory": 1024,
+            "maxDuration": 10
+        }
+    },
+    "routes": [
         {
-            "source": "/api/(.*)",
-            "destination": "/api?path=$1"
+            "src": "/api/(.*)",
+            "dest": "/api/index.js"
         }
     ]
 }
